//
//  AccessibilityIdentifiers.swift
//  TestingPlayground
//
//  Created by Dmitry Trimonov on 19.07.2021.
//

import Foundation

enum AccessibilityIdentifiers {
    enum StartScreen {
        static let tableView = "start_screen_table"
        static let addItemButton = "start_screen_add_item_button"
    }
    enum EditorScreen {
        static let inputTextField = "editor_input_text_field"
        static let saveButton = "editor_save_button"
    }
}
